--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
     packages:
     - postgresql-9.6-postgis-2.4
 env:
-  DBCONN=postgresql://postgres@127.0.0.1/testdb
+  DATABASE_URL=postgresql://postgres@127.0.0.1/testdb
 
 install:
   - rustc --version
