--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,11 @@ edition = "2018"
 postgres = "^0.17"
 byteorder = "^0.5"
 bytes = "0.5"
+diesel = { version = "1.4.5", features = [ "postgres" ], optional = true }
+
+[features]
+default = [ "diesel-shim" ]
+diesel-shim = [ "diesel" ]
+
+[dev-dependencies]
+dotenv = "0.15"
